Support multiple methods for a single ApiListener  (#6074)